--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mynewapp",
+  "name": "taller-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:mynewapp": "node dist/mynewapp/server/server.mjs"
+    "serve:ssr:taller-angular": "node dist/taller-angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
